--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ figure{
 .logo img{
   height: 50px;
   vertical-align: middle;
+  padding-left: 2rem;
 }
 .footer{
   display: flex;
@@ -110,6 +111,7 @@ figure{
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
 .event-title{
   margin-left: 20px;
 }
@@ -169,16 +171,220 @@ figure{
 }
 
 .burger-button{
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
-  background-color:rgba(0,0,0,.8);
+  background-color:rgba(55, 226, 33, 0.8);
   display: none;
-  line-height: 40px;
+  line-height: 60px;
   text-align: center;
   position: fixed;
   z-index: 10;
-  left: 5px;
-  top: 5px;
+  left: 15px;
+  top: 10px;
   color: white;
 }
+
+/* --------------------------- MEDIA QUERIES --------------------------- */
+
+/* Extra large */ 
+@media screen and (min-width: 1200px) {
+  
+}
+
+
+/* Large */ 
+@media screen and (max-width: 1199px) {
+  body {
+    background-color: rgba(255, 195, 30, 0.356);
+  }
+
+  .event {
+    background-color: rgb(163, 124, 52);
+    height: 60%;
+  }
+
+  .event-list {
+    margin-bottom: 50px;
+  }
+}
+
+
+/* Medium */ 
+@media screen and (max-width: 991px) {
+  body {
+    background-color: rgb(45, 126, 45);
+  }
+
+  .event {
+    width: 40%;    
+    height: auto;
+    margin: 0 5% 5% 5%;
+    background-color: rgb(25, 77, 1);
+  }
+  
+  .event img {
+    width: 100%;
+  }
+
+  .event p,h3 {
+    text-align: right;
+  }
+
+  .event-title{
+    margin-left: 5%;
+    color: rgb(255, 187, 0);
+  }
+
+  .event a {
+    display: block;
+    width: 15%;
+    margin-top: 50px;
+    margin-left: 70%;
+  }
+
+  .footer{
+    display: flex;
+    color: white;
+    background-color: #1b2127;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+}
+
+
+
+/* Small */ 
+@media only screen and (max-width: 767px) {
+  body {
+    background-color: rgba(0, 162, 255, 0.726);
+  }
+
+  .burger-button {
+    display: block;
+  }
+
+  .menu {
+    position: fixed;
+    background-color: #33373bb6;
+    top: 0;
+    bottom: 0;
+    left: -100vw;
+    width: 70vw;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    transition: .3s;
+    padding-top: 10%;
+  }
+
+  .menu.is-active {
+    left:0;
+  }
+
+  .header {
+    display: block;
+    height: auto;
+  }
+
+  .header ul {
+    display: initial;
+  }
+
+  .header ul li {
+    height: 50px;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+
+  .header a {
+    justify-content: center;
+    font-size: 4rem;
+    text-decoration: underline;
+    color: lawngreen;
+  }
+
+  .header .logo {
+    text-align: right;
+    padding: 15px;
+  }
+
+  .event {
+    width: 80%;
+    margin: 0 10% 5% 10%;
+    background-color: rgb(26, 98, 192);
+    flex-shrink: initial;
+  }
+
+  .event img {
+    width: 100%;
+  }
+
+  .event p,h3 {
+    text-align: center;
+  }
+
+  .event-title{
+    margin-left: 30%;
+    color: whitesmoke;
+  }
+
+  .event a {
+    display: block;
+    width: 15%;
+    margin-top: 50px;
+    margin-left: 0%;
+  }
+
+  .footer {
+    padding: ;
+    background-color: rgb(15, 53, 102);
+  }
+
+}
+
+
+/* Extra small */ 
+@media screen and (max-width: 575px) {
+  body {
+    background-color: darkgray;
+    
+  }
+
+  .event-title{
+    margin-left: 10%;
+    color: teal;
+  }
+
+  .event {
+    width: 80%;
+    margin: 0 10% 5% 10%;
+    background-color: rgb(59, 59, 59);
+  }
+
+  .event a {
+    width: 80%;
+    display: inline-block;
+    background-color: rgb(0, 162, 255);
+    color: white;
+  }
+  
+  .event p,h3 {
+    text-align: start;
+  }
+
+  .footer {
+    display:block;
+    background-color: rgb(46, 50, 54);
+    text-align: center;
+    border: 1px solid transparent;
+  }
+
+  .event-list {
+    margin-bottom: 100px;
+  }
+
+}
+
